package chinesecheckers.patterns;

public interface Observer {
    void update(String message);
}
